--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -491,6 +491,25 @@ Mikołaj Bojańczyk, Sławomir Lasota and Igor Potapov
 	volume    = {12740},
 }
 
+@techreport{AMPP22,
+  	author    = {Andr{\'e}, {\'E}tienne and Marinho, Dylan and Petrucci, Laure and van de Pol, Jaco},
+  	title     = {Efficient Convex Zone Merging in Parametric Timed Automata},
+	year      = {2022},
+	note      = {Submitted},
+}
+	booktitle = {Proceedings of the 14th {NASA} Formal Methods Symposium ({NFM} 2022)},
+	SHORTbooktitle = {{NFM}},
+	editor    = {Klaus Havelund and Jyo Deshmukh and Ivan Perez},
+	location  = {Caltech, Pasadena, CA, USA},
+	eventdate = {2022-05-24/2022-05-27},
+	publisher = {Springer},
+	series    = {\LNCS{}},
+	toappear  = {true},
+	volume    = {TODO},
+	pages     = {TODO},
+	doi       = {TODO},
+
+
 @inproceedings{Andre13FSFMA,
 	author = {Andr{\'e}, {\'E}tienne},
 	booktitle = {Proceedings of the 1st French Singaporean Workshop on Formal Methods and Applications ({FSFMA} 2013)},
