--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -287,7 +287,7 @@
 
 
 % Current version
-\newcommand{\imitatorversion}{3.3-beta}
+\newcommand{\imitatorversion}{3.3}
 \newcommand{\imitatorversionname}{Cheese Caramel au beurre salé}
 
 
